criacao da tela cadastro estudante

--- a/src/app/componentes/estudante/estudante.component.html
+++ b/src/app/componentes/estudante/estudante.component.html
@@ -1,5 +1,80 @@
 <div class="content-wrapper" style="min-height: 632px;">
-    <p style="color: white;">estudante works!</p>
-</div>
+    <div class="card card-primary">
+        <div class="card-header">
+        <h3 class="card-title">Quick Example</h3>
+        </div>
+        
+        
+        <form>
+        <div class="card-body">
+        <div class="form-group">
+        <label for="exampleInputEmail1">Nome</label>
+        <input type="text" class="form-control" id="nome" placeholder="Enter nome">
+        </div>
+        <div class="form-group">
+        <label for="examplepai">Pai</label>
+        <input type="text" class="form-control" id="nompai" placeholder="nome do pai">
+        </div>
+        <div class="form-group">
+            <label for="examplemae">Mãe</label>
+            <input type="text" class="form-control" id="nomeMae" placeholder="nome da mae">
+            </div>
+            <div class="form-group">
+                <label for="email">Email </label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email">
+                </div>
+
+                <div class="form-group">
+                    <label for="telefone">telefone</label>
+                    <input type="tel" class="form-control" id="telefone" placeholder="telefone">
+                    </div>
+                    <div class="form-group">
+                        <label>Curso</label>
+                        <select class="form-control">
+                        <option>Informática</option>
+                        <option>Telecomunição</option>
+                        </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="turma">Turma</label>
+                            <input type="text" class="form-control" id="turma" placeholder="turma A">
+                            </div>
+                        <div class="form-group">
+                            <label for="anoFrequencia">Ano de Frequência</label>
+                            <input type="number" class="form-control" id="anoFrequencia" placeholder="2022">
+                            </div>
+                            <div class="form-group">
+                                <label for="anoFrequencia">Ano que Frequêntou</label>
+                                <input type="number" class="form-control" id="anoFreqquentou" placeholder="2020">
+                                </div>
+                                <div class="form-group">
+                                    <label for="numeroDoProcesso">Numero de Processo</label>
+                                    <input type="number" class="form-control" id="numeroDeProcesso" placeholder="1200">
+                                    </div>
+
+                                
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label">Sim</label>
+                                    <div class="form-group">
+                                        <label for="turma">nome da cadeira</label>
+                                        <input type="text" class="form-control" id="cadeira" placeholder="nome da cadeira">
+                                        </div>
+                                    </div>
+                                    <div class="card-footer">
+                                        <button type="submit" class="btn btn-primary">Salvar</button>
+                                        </div>
+
+
+
+
+
+
+
+
+
+
+       
+
 
 <!-- https://adminlte.io/themes/v3/pages/forms/general.html -->
